Don't allow direct API usage of latest_components queryset, update tests
